--- a/static/src/components/profile-card/_profile-card.scss
+++ b/static/src/components/profile-card/_profile-card.scss
@@ -11,6 +11,11 @@
     }
     .card-body {
       box-shadow: none !important;
+
+      a {
+        color: $dark-red;
+        text-decoration: underline;
+      }
     }
     .card-title {
       color: inherit;
@@ -26,6 +31,10 @@
     background-color: transparent;
     box-shadow: none !important;
     padding: 0;
+
+    a {
+      color: $dark-red;
+    }
   }
   .card-title {
     margin: 0;
