--- a/static/src/scss/_core/_placeholder-selectors.scss
+++ b/static/src/scss/_core/_placeholder-selectors.scss
@@ -1,6 +1,5 @@
 %card-dark {
-  &[role="link"] {
-
+  &[role='link'] {
     &:hover,
     &:focus {
       .card-body {
@@ -67,7 +66,7 @@
     flex-direction: row;
   }
 
-  &[role="link"] {
+  &[role='link'] {
     &:hover {
       @include media-breakpoint-up(800) {
         border: 3px solid $red;
@@ -105,7 +104,7 @@
     }
 
     @include media-breakpoint-up(1000) {
-      padding: rem(32) rem(60)
+      padding: rem(32) rem(60);
     }
 
     @include media-breakpoint-up(1200) {
@@ -167,13 +166,13 @@
     transform: translate(-50%, -50%);
   }
 
-  [class*="-bg-dark"] & {
+  [class*='-bg-dark'] & {
     .icon {
       color: $yellow;
     }
   }
 
-  &[class*="prev"] {
+  &[class*='prev'] {
     left: 0;
 
     .icon {
@@ -181,16 +180,16 @@
     }
   }
 
-  &[class*="next"] {
+  &[class*='next'] {
     right: 0;
   }
 }
 
 %event-dark {
   background-color: $gray-900;
-  border-color: #5D5D5D;
+  border-color: #5d5d5d;
 
-  &[role="link"] {
+  &[role='link'] {
     &:hover {
       background-color: $white;
       border-color: $yellow;
@@ -214,7 +213,7 @@
       }
 
       .event-time-location {
-        >span {
+        > span {
           &:not(:last-child) {
             &:after {
               color: $red;
@@ -238,7 +237,7 @@
   }
 
   .event-time-location {
-    >span {
+    > span {
       &:not(:last-child) {
         &:after {
           color: $yellow;
@@ -318,7 +317,7 @@
 }
 
 %form-select {
-  background-image: url("../../img/Dropdown_Chevron.svg");
+  background-image: url('../../img/Dropdown_Chevron.svg');
   background-position: right rem(16) center;
   background-repeat: no-repeat;
   background-size: rem(19) rem(10);
@@ -328,7 +327,7 @@
 %link {
   border-bottom: 1px solid transparent;
   color: $red;
-  transition: .25s border-color ease-in-out;
+  transition: 0.25s border-color ease-in-out;
 
   &:hover {
     border-bottom-color: $red;
@@ -341,8 +340,7 @@
   font-weight: 700;
   margin-right: rem(36);
   position: relative;
-  transition: .25s border-color ease-in-out,
-    .25s color ease-in-out;
+  transition: 0.25s border-color ease-in-out, 0.25s color ease-in-out;
 
   &:hover,
   &:focus {
@@ -357,14 +355,13 @@
 
   &:after {
     @extend %icomoon;
-    content: "\e901";
+    content: '\e901';
     display: inline-block;
     font-size: rem(4);
     opacity: 0;
     bottom: rem(6);
     position: absolute;
     transform: translate(0, -50%);
-    transition: .25s opacity ease-in-out,
-      .25s transform ease-in-out;
+    transition: 0.25s opacity ease-in-out, 0.25s transform ease-in-out;
   }
 }
